blocks/modal.css
.modal {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0 16px;
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s linear 0.5s, opacity 0.5s linear;
}

.modal_opened {
  visibility: visible;
  opacity: 1;
  transition-delay: 0s;
}

.modal__container {
  background: #fff;
  padding: 32px 50px;
  max-width: 730px;
  width: 100%;
  position: relative;
  box-sizing: border-box;
  border-radius: 8px;
}

.modal__container_type_preview {
  background-color: transparent;
  padding: 0;
  width: auto;
  display: flex;
  flex-direction: column;
  align-items: start;
}
.modal__container_type_preview p {
  padding: 0;
  background: rgba(33, 33, 33, 1);
  color: rgba(255, 255, 255, 1);
  padding: 4px 8px;
  margin: 8px 0 0;
  border-radius: 8px;
  font-family: Poppins;
  font-size: 20px;
  font-weight: 500;
  line-height: 24px;
  text-align: left;
}
.modal__image {
  width: 100%;
  object-fit: contain;
  max-width: 80vw;
  max-height: 80vh;
  border-radius: 8px;
}

.modal__close-btn {
  position: absolute;
  top: 30px;
  right: 50px;
  width: 40px;
  height: 40px;
  background: url(/images/close.svg);
  background-size: cover;
  border: none;
  padding: 0;
}
.modal__close-btn-preview {
  background: url(/images/close-light.png);
  top: 0;
  right: -52.5px;
  opacity: 1;
}
.modal__close-btn:hover {
  opacity: 1;
  cursor: pointer;
}
.modal__close-btn-preview:hover {
  opacity: 0.4;
  cursor: pointer;
}


.modal__title {
  margin: 0 0 32px;
  font-weight: 500;
  font-size: 32px;
  line-height: 1;
}

.modal__label {
  display: block;
  margin: 0 0 32px;
  color: rgba(33, 33, 33, 0.7);
  font-weight: 500;
  font-size: 16px;
  line-height: 17.6px;
}

.modal__submit-btn {
  width: 156px;
  padding: 18px 0;
  background-color: rgba(33, 33, 33, 1);
  color: #fff;
  border: none;
  border-radius: 8px;
}
.modal__submit-btn:hover{
  cursor: pointer
}
.modal__submit-btn_disabled {
  opacity: 0.5;
}
.modal__input {
  width: 100%;
  border: 1px solid rgba(33, 33, 33, 0.4);
  border-radius: 8px;
  color: rgba(33, 33, 33, 1);
  font-weight: 500;
  font-size: 20px;
  line-height: 1;
  margin: 8px 0 0;
  padding: 16px 12px;
}

.modal__input_type_error {
  border: 1px solid rgba(255, 0, 0, 0.6);
}
.modal__error {
  display: block;
  color: rgba(255, 0, 0, 0.7);
  margin: 8px 0 0;
  font-size: 16px;
  line-height: 17.6px;
  font-weight: 500;
}

@media screen and (max-width: 627px) {
  .modal {
    padding: 0 10px;
  }

  .modal__container {
    padding: 12px;
  }

  .modal__title {
    font-size: 20px;
    margin: 10px 0 34px;
  }
  .modal__close-btn {
    top: 12px;
    right: 12px;
  }

  .modal__label {
    margin-bottom: 24px;
  }

  .modal__submit-btn {
    width: 100%;
  }
  .modal__input {
    font-size: 16px;
  }

  .modal__container_type_preview {
    padding: 0 6px;
    width: 100%;
  }
  .modal__close-btn-preview {
    position: absolute;
    top: -48px;
    right: 0px;
  }
  .modal__image {
    border-radius: 4px;
    max-width: 627px;
  }
  .modal__container_type_preview p {
    font-size: 16px;
    line-height: 19.2px;
  }
}

